feat : role api 文档
